--- a/app/templates/work/allcontractlist.html
+++ b/app/templates/work/allcontractlist.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "_macros.html" as macros %}
 
 {% block title %}Huiwen OA - 合同列表{% endblock %}
 
@@ -8,7 +9,7 @@
         <table class="table table-striped">
             <tread><tr><th>申请时间</th><th>公司</th><th>部门</th><th>内容</th><th style="text-align:right;">金额&nbsp&nbsp&nbsp&nbsp</th><th>申请人</th><th>交叉</th><th>法务</th><th>财务</th><th>审批</th><th>详情</th></tr></tread>
             <tbody>
-                {% for contract in allcontract %}
+                {% for contract in contracts_disp %}
                 {% if contract.deleted==True %}
                 {% else %}
                 <tr>
@@ -43,4 +44,13 @@
         </table>
     </div>
 </div>
+
+{% if contract_pagination %}
+<div class="text-center">
+<div class="pagination">
+    {{ macros.pagination_widget(contract_pagination, '.allcontractlist') }}
+</div>
+</div>
+{% endif %}
+
 {% endblock %}
