- 控制合同申请可视权限

--- a/app/templates/work/allcontractlist.html
+++ b/app/templates/work/allcontractlist.html
@@ -3,7 +3,7 @@
 
 {% block title %}Huiwen OA - 合同列表{% endblock %}
 
-{% block content %}
+{% block page_content %}
 <div class="container">
     <div>
         <table class="table table-striped">
